--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: "Light";   /*Can be any text*/
+  font-family: "Bold";   /*Can be any text*/
   src: local("timesNewRomanBold"),
     url("./fonts/timesNewRomanBold.ttf") format("truetype");
 }
@@ -57,6 +57,10 @@ code {
   font-size: 16px;
 }
 
+.fs-15 {
+  font-size: 15px;
+}
+
 .fs-11 {
   font-size: 11px;
 }
@@ -75,6 +79,7 @@ code {
 
 .text-dark-green {
   color: #001e00 !important;
+  cursor: pointer;
 }
 
 .text-hover-green:hover {
@@ -100,6 +105,7 @@ code {
 .hover-rotate:hover{
   transform: rotate(180deg);
 }
+
 .hover-rotate.collapse{
   transform: rotate(90deg); 
 }
@@ -110,4 +116,25 @@ code {
 
 .text-green {
   color: #14A800 !important;
+}
+
+.bg-green-200 {
+  background-color: #14A800 !important;
+}
+
+.dropdown-hover:hover {
+  /* background-color: #F2F7F2 !important; */
+  background-color: #f7faf7 !important; 
+}
+
+.dropdown-hover-background {
+  background-color: #D5E0D5 !important; 
+}
+
+.br-10 {
+  border-radius: 10px !important;
+}
+
+.z-1 {
+  z-index: 11 !important;
 }
